--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,7 +10,7 @@
 <body>
     <div class="main-content">
         {{> header  }}
-        <br>
+        <p>This site was created by {{ name }}. It uses data from mapbox.com and weatherstack.com.</p>
         <img class="portrait" src="./img/robot.png">
     </div>
     {{> footer }}
